setup test for no nuget dependencies

--- a/testoutput.nuspec
+++ b/testoutput.nuspec
@@ -1,13 +1,1 @@
-<?xml version="1.0"?> 
-<package>
-    <metadata>
-        <id>NuGetSampleTest</id>
-        <version>1.0.1</version>
-        <title>Just a test file</title>
-        <authors>Jeff</authors>
-        <description>this is only a test</description>
-    <dependencies><dependency id="EntityFramework" version="6.2.0"/><dependency id="Newtonsoft.Json" version="12.0.2"/></dependencies></metadata>
-    <files>
-        <file src="NugetSampleTest.dll" target="lib\Net45\test.dll"/>
-    </files>
-</package>
+undefined
